--- a/AssignmentTikiDeal.css
+++ b/AssignmentTikiDeal.css
@@ -957,6 +957,7 @@ a:hover{
 .login form{
     width: 400px;
     margin:auto;
+    margin-top: 10px;
 }
 /* reponsive */
 @media only screen and (max-width: 540px){
